# dioxus-kinetics

./: .gitignore  Cargo.toml  README.md  SECURITY.md  deny.toml
crates/kinetics/: Cargo.toml
crates/kinetics-cli/: Cargo.toml
crates/kinetics-cli/src/: cmd_doctor.rs  cmd_init.rs  cmd_lint.rs  cmd_preview.rs  cmd_render.rs  cmd_tokens.rs  main.rs  scene_registry.rs
crates/kinetics-cli/src/template/: init_main.rs.tmpl
crates/kinetics-cli/tests/: cli.rs
crates/kinetics-render/: Cargo.toml
crates/kinetics-render/src/: capture.rs  encode.rs  lib.rs  pdf.rs  template.rs
crates/kinetics-render/tests/: capture.rs  encode.rs  pdf.rs  renderer.rs
crates/kinetics/src/: lib.rs
crates/kinetics/tests/: a11y.rs  prelude.rs
crates/ui-blocks/: Cargo.toml
crates/ui-blocks/src/: caption.rs  lib.rs  lower_third.rs  metric_counter.rs  social_overlay.rs  wipe_transition.rs
crates/ui-blocks/tests/: blocks_ssr.rs
crates/ui-dioxus/: Cargo.toml
crates/ui-dioxus/src/: accordion.rs  auth.rs  billing.rs  buttons.rs  capture.rs  charts.rs  combobox.rs  composition.rs  cue_style.rs  data_table.rs  data_table_virtual.rs  datepicker.rs  display.rs  form.rs  forms.rs  kinetics.rs  layout.rs  lib.rs  liquid_glass.rs  motion_path.rs  navigation.rs  overlays.rs  popover.rs  roving.rs  scene_player.rs  select.rs  sortable.rs  split_text.rs  stagger.rs  tag_input.rs  tour.rs  typography.rs  upload.rs
crates/ui-dioxus/src/ai/: agent_timeline.rs  answer_panel.rs  assistant_panel.rs  citation.rs  mod.rs  prompt_input.rs  source_card.rs  status.rs  streaming_text.rs  voice.rs
crates/ui-dioxus/src/overlays/: command_menu.rs  dialog.rs  dropdown_menu.rs  focus_trap.rs  mod.rs  sheet.rs  toast.rs  tooltip.rs
crates/ui-dioxus/tests/: advanced_ssr.rs  aria_current_ssr.rs  charts_extra_ssr.rs  commerce_ssr.rs  composition_capture_ssr.rs  cue_inline_style_ssr.rs  form_ssr.rs  glass_upgrade.rs  icon_button_ssr.rs  kinetics_ssr.rs  motion_path_ssr.rs  perplexity_glass_ssr.rs  presence_ssr.rs  scene_player_ssr.rs  sequence_ssr.rs  shared_ssr.rs  split_text_ssr.rs  ssr.rs  tag_input_ssr.rs  timeline_scope_stagger_ssr.rs  upload_ssr.rs  virtual_table_ssr.rs
crates/ui-glass-dioxus/: Cargo.toml
crates/ui-glass-dioxus/src/: component.rs  lib.rs  motion_bridge.rs  stub.rs  surface_state.rs  web.rs
crates/ui-glass-dioxus/tests/: ssr_placeholder.rs
crates/ui-glass-engine/: Cargo.toml
crates/ui-glass-engine/src/: capabilities.rs  compositor.rs  headless.rs  lib.rs  motion.rs  noise.rs  pipeline.rs  render_graph.rs  svg_fallback.rs  uniforms.rs
crates/ui-glass-engine/src/background/: image_cache.rs  mod.rs  render.rs
crates/ui-glass-engine/src/shaders/: bg_gradient.wgsl  bg_mesh.wgsl  blur.wgsl  compose.wgsl  mipmap.wgsl
crates/ui-glass-engine/tests/: background_render.rs  background_sources.rs  behavior.rs  capabilities.rs  compositor_api.rs  compositor_with_source.rs  end_to_end.rs  golden_ambient_mesh.rs  golden_disperse.rs  golden_floating.rs  golden_full.rs  golden_inner_shadow.rs  golden_pointer.rs  golden_refract.rs  golden_scroll.rs  golden_specular.rs  golden_tint_adapt.rs  headless_render.rs  motion_bridge.rs  multi_region.rs  noise_layout.rs  pipeline_cache.rs  pipeline_compile.rs  scene_graph.rs  svg_filter.rs  uniforms_layout.rs
crates/ui-glass-engine/tests/common/: mod.rs
crates/ui-runtime/: Cargo.toml
crates/ui-runtime/src/: animation.rs  frame_adapter.rs  lib.rs  measurement.rs  measurement_native.rs  measurement_web.rs  presence.rs  reduced_motion.rs  scene_clock.rs  scene_driver.rs  scheduler.rs  scheduler_native.rs  scheduler_web.rs  shared.rs  state.rs  theme.rs  timeline.rs  waapi.rs  waapi_stub.rs
crates/ui-runtime/src/adapters/: css_keyframes.rs  css_keyframes_stub.rs  mod.rs  sequence.rs  waapi.rs  waapi_stub.rs
crates/ui-runtime/src/drivers/: mod.rs  scroll.rs  scroll_stub.rs
crates/ui-runtime/tests/: frame_adapter.rs  hooks_ssr.rs  measurement_ssr.rs  reduced_motion_wasm.rs  scene_clock.rs  scene_driver.rs  scheduler_native.rs  sequence_adapter.rs  shared_registry.rs  state.rs
crates/unified_ui/: Cargo.toml
crates/unified_ui/src/: lib.rs
crates/unified_ui/tests/: prelude.rs
examples/component-gallery/: Cargo.toml  Dioxus.toml
examples/component-gallery/e2e/: .gitignore  README.md  audit-report.md  global-setup.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
examples/component-gallery/e2e/reporters/: audit-report.ts
examples/component-gallery/e2e/tests/: animation-motion.spec.ts  catalog-blocks.spec.ts  exposure-polish.spec.ts  gsap-tier-primitives.spec.ts  learn-surfaces.spec.ts  new-surfaces.spec.ts  scene-player.spec.ts  smoke.spec.ts  visual.spec.ts
examples/component-gallery/e2e/tests/_lib/: clock.ts  component-manifest.ts  console-guard.ts  mount.ts  scrub.ts  spring-reference.json  styles.ts  test-mode.ts
examples/component-gallery/e2e/tests/components/: ai-surfaces.spec.ts  button.spec.ts  capture-stage.spec.ts  checkbox.spec.ts  combobox.spec.ts  command-menu.spec.ts  dialog.spec.ts  dropdown-menu.spec.ts  sidebar.spec.ts  (+25 more)
examples/component-gallery/src/: app.rs  brand.rs  controls.rs  demo_frame.rs  docs.rs  lib.rs  main.rs  persistence.rs  styles.rs
examples/component-gallery/src/previews/: actions.rs  ai.rs  capture.rs  composition.rs  dataviz.rs  feedback.rs  foundations.rs  guidance.rs  inputs.rs  layout.rs  learning.rs  liquid_glass.rs  mod.rs  motion.rs  navigation.rs  new_families.rs  scene.rs  shared.rs  surfaces.rs  voice.rs  workflows.rs
examples/component-gallery/tests/: controls.rs  demo_frame.rs  gallery.rs  manifest.rs  spring_reference.rs
examples/flagship/: Cargo.toml  Dioxus.toml  README.md
examples/flagship/e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
examples/flagship/e2e/tests/: flagship.spec.ts
examples/flagship/src/: app.rs  lib.rs  main.rs  styles.rs
examples/flagship/src/sections/: cta.rs  features.rs  hero.rs  metrics.rs  mod.rs  story.rs
examples/showreel/: Cargo.toml  README.md
examples/showreel/src/: app.rs  main.rs
(+148 files in other folders)
