[workspace]
resolver = "2"
members = [
    "crates/ui-core",
    "crates/ui-tokens",
    "crates/ui-glass",
    "crates/ui-motion",
    "crates/ui-layout",
    "crates/ui-dom",
    "crates/ui-native",
    "crates/ui-dioxus",
    "crates/ui-timeline",
    "crates/ui-composition",
    "crates/ui-capture",
    "crates/ui-styles",
    "crates/kinetics",
    "crates/ui-runtime",
    "crates/ui-icons",
    "examples/component-gallery",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
publish = false

[workspace.dependencies]
dioxus = "0.7"
dioxus-ssr = "0.7"
ui-core = { path = "crates/ui-core" }
ui-tokens = { path = "crates/ui-tokens" }
ui-glass = { path = "crates/ui-glass" }
ui-motion = { path = "crates/ui-motion" }
ui-layout = { path = "crates/ui-layout" }
ui-dom = { path = "crates/ui-dom" }
ui-native = { path = "crates/ui-native" }
ui-dioxus = { path = "crates/ui-dioxus" }
ui-timeline = { path = "crates/ui-timeline" }
ui-composition = { path = "crates/ui-composition" }
ui-capture = { path = "crates/ui-capture" }
ui-styles = { path = "crates/ui-styles" }
kinetics = { path = "crates/kinetics" }
ui-runtime = { path = "crates/ui-runtime" }
ui-icons = { path = "crates/ui-icons" }
bitflags = "2.6"
