[package]
name = "kinetics-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "kinetics"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "process", "macros"] }
kinetics-render = { path = "../kinetics-render" }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
