[package]
name = "kinetics"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = [
    "web",
    "desktop",
    "mobile",
    "tokens",
    "glass",
    "motion",
    "layout-motion",
    "a11y",
    "timeline",
    "composition",
    "capture",
    "runtime",
    "icons",
    "liquid-glass",
    "blocks",
]
web = ["dep:ui-dom"]
desktop = ["dep:ui-dom"]
mobile = ["dep:ui-dom"]
native = ["dep:ui-native"]
tokens = []
glass = []
liquid-glass = ["ui-dioxus/liquid-glass"]
motion = []
layout-motion = []
a11y = []
a11y-tests = []
timeline = ["dep:ui-timeline"]
composition = ["dep:ui-composition"]
capture = ["dep:ui-capture"]
runtime = ["dep:ui-runtime"]
icons = ["dep:ui-icons"]
blocks = ["dep:ui-blocks"]

[dependencies]
ui-core.workspace = true
ui-tokens.workspace = true
ui-glass.workspace = true
motion-core = { package = "ui-motion", path = "../ui-motion" }
ui-layout.workspace = true
ui-dioxus.workspace = true
ui-styles.workspace = true
ui-dom = { workspace = true, optional = true }
ui-native = { workspace = true, optional = true }
ui-timeline = { workspace = true, optional = true }
ui-composition = { workspace = true, optional = true }
ui-capture = { workspace = true, optional = true }
ui-runtime = { workspace = true, optional = true }
ui-icons = { workspace = true, optional = true }
ui-blocks = { path = "../ui-blocks", optional = true }

[dev-dependencies]
dioxus.workspace = true
dioxus-ssr.workspace = true

[lib]
path = "src/lib.rs"

[[test]]
name = "a11y"
path = "tests/a11y.rs"
required-features = ["a11y-tests"]
