[package]
name = "ui-blocks"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dioxus.workspace = true
ui-dioxus = { path = "../ui-dioxus" }
ui-timeline = { path = "../ui-timeline" }
ui-motion = { path = "../ui-motion" }
ui-composition = { path = "../ui-composition" }

[dev-dependencies]
dioxus-ssr.workspace = true

[lib]
path = "src/lib.rs"
