[package]
name = "ui-dioxus"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dioxus.workspace = true
ui-composition.workspace = true
ui-core.workspace = true
ui-glass.workspace = true
ui-glass-dioxus = { workspace = true, optional = true }
ui-glass-engine = { workspace = true, optional = true }
ui-icons.workspace = true
ui-layout.workspace = true
ui-motion.workspace = true
ui-runtime.workspace = true
ui-timeline.workspace = true
ui-tokens.workspace = true

[dev-dependencies]
dioxus-ssr.workspace = true

[features]
default = []
liquid-glass = ["dep:ui-glass-dioxus", "dep:ui-glass-engine"]

[lib]
path = "src/lib.rs"
