[package]
name = "ui-glass-dioxus"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dioxus.workspace = true
ui-glass.workspace = true
ui-glass-engine.workspace = true
ui-runtime.workspace = true
ui-motion.workspace = true
ui-tokens.workspace = true
wgpu.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "DomRect",
    "PointerEvent",
    "WheelEvent",
    "MouseEvent",
    "MediaQueryList",
    "MediaQueryListEvent",
    "CssStyleDeclaration",
    "Performance",
] }
wasm-bindgen-futures = "0.4"
gloo-events.workspace = true
gloo-utils.workspace = true

[dev-dependencies]
dioxus-ssr.workspace = true
pollster.workspace = true

[lib]
path = "src/lib.rs"
