[package]
name = "ui-glass-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
headless = []

[dependencies]
ui-glass.workspace = true
ui-tokens.workspace = true
ui-motion.workspace = true
wgpu.workspace = true
bytemuck.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { workspace = true, features = ["vulkan", "metal", "dx12", "gles", "wgsl"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { workspace = true, features = ["webgpu", "webgl", "wgsl"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "MediaQueryList",
] }

[dev-dependencies]
pollster.workspace = true
image.workspace = true

[lib]
path = "src/lib.rs"

# Integration tests that drive the wgpu compositor through the headless
# `TestHarness` are gated behind the `headless` feature. Without the feature
# they would fail to compile because `ui_glass_engine::headless` is itself
# `#[cfg(feature = "headless")]`. Listing each here as `required-features`
# tells cargo to skip the target instead, so workspace-wide `cargo clippy`
# / `cargo test` passes without flags.
[[test]]
name = "background_render"
required-features = ["headless"]

[[test]]
name = "behavior"
required-features = ["headless"]

[[test]]
name = "compositor_api"
required-features = ["headless"]

[[test]]
name = "compositor_with_source"
required-features = ["headless"]

[[test]]
name = "end_to_end"
required-features = ["headless"]

[[test]]
name = "golden_ambient_mesh"
required-features = ["headless"]

[[test]]
name = "golden_disperse"
required-features = ["headless"]

[[test]]
name = "golden_floating"
required-features = ["headless"]

[[test]]
name = "golden_full"
required-features = ["headless"]

[[test]]
name = "golden_inner_shadow"
required-features = ["headless"]

[[test]]
name = "golden_pointer"
required-features = ["headless"]

[[test]]
name = "golden_refract"
required-features = ["headless"]

[[test]]
name = "golden_scroll"
required-features = ["headless"]

[[test]]
name = "golden_specular"
required-features = ["headless"]

[[test]]
name = "golden_tint_adapt"
required-features = ["headless"]

[[test]]
name = "headless_render"
required-features = ["headless"]

[[test]]
name = "motion_bridge"
required-features = ["headless"]

[[test]]
name = "multi_region"
required-features = ["headless"]

[[test]]
name = "pipeline_cache"
required-features = ["headless"]

[[test]]
name = "pipeline_compile"
required-features = ["headless"]

[[test]]
name = "scene_graph"
required-features = ["headless"]
