[package]
name = "ui-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dioxus.workspace = true
ui-motion = { path = "../ui-motion" }
ui-timeline = { path = "../ui-timeline" }
ui-layout = { path = "../ui-layout" }
ui-composition = { path = "../ui-composition" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "time", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "DomRect",
    "CssStyleDeclaration",
    "Performance",
    "MediaQueryList",
    "console",
    "Animation",
    "AnimationEffect",
    "AnimationPlaybackEvent",
    "KeyframeEffect",
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
    "IntersectionObserver",
    "IntersectionObserverInit",
] }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
dioxus-ssr.workspace = true
tokio = { version = "1", features = ["rt", "time", "macros", "test-util"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
path = "src/lib.rs"
