[package]
name = "component-gallery"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dioxus.workspace = true
kinetics.workspace = true
ui-styles.workspace = true

[dev-dependencies]
dioxus-ssr.workspace = true

[features]
web = ["dioxus/web"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage", "MediaQueryList"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "component-gallery"
path = "src/main.rs"
