[package]
name = "component-gallery"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dioxus.workspace = true
kinetics.workspace = true
ui-styles.workspace = true
ui-glass.workspace = true
ui-glass-dioxus.workspace = true
ui-glass-engine.workspace = true
ui-tokens.workspace = true

[dev-dependencies]
dioxus-ssr.workspace = true
serde_json = "1"
ui-motion.workspace = true

[features]
web = ["dioxus/web"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "MediaQueryList",
    "MediaQueryListEvent",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[lib]
path = "src/lib.rs"

[[bin]]
name = "component-gallery"
path = "src/main.rs"
